// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components Templates - Message Snapshots renders custom title 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "4em",
        "marginTop": "1.5em",
      }
    }
  >
    title
  </h1>
  <h2
    className="ui header"
  >
    <div />
  </h2>
</div>
`;

exports[`App Components Templates - Message Snapshots renders mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "2em",
        "marginTop": "1em",
      }
    }
  >
    
  </h1>
  <h3
    className="ui header"
  >
    <div />
  </h3>
</div>
`;

exports[`App Components Templates - Message Snapshots renders no mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "4em",
        "marginTop": "1.5em",
      }
    }
  >
    
  </h1>
  <h2
    className="ui header"
  >
    <div />
  </h2>
</div>
`;
